Changes to Moves;
Hyperbeam -- Recharge instantly
Low Kick -- Based on current health
triple kick -- constant 20 power
flail -- equation changed